# todo-app

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/src/application/commands/: __init__.py  archive_task_command.py  create_task_command.py  mark_task_done_command.py  mark_task_pending_command.py  modify_task_command.py
backend/src/application/handlers/: __init__.py  archive_task_handler.py  create_task_handler.py  get_all_tasks_handler.py  get_tasks_by_status_handler.py  mark_task_done_handler.py  mark_task_pending_handler.py  modify_task_handler.py
backend/src/application/queries/: __init__.py  get_all_tasks_query.py  get_tasks_by_status_query.py
backend/src/domain/entities/: __init__.py  task.py
backend/src/domain/repositories/: task_repository.py
backend/src/infrastructure/database/: __init__.py  database.py  models.py
backend/src/infrastructure/repositories/: __init__.py  sqlite_task_repository.py
backend/src/presentation/api/: __init__.py  task_router.py
backend/src/presentation/schemas/: __init__.py  task_schemas.py
backend/tests/functional/: test_task_api.py
backend/tests/unit/: test_archive_task_handler.py  test_create_task_handler.py  test_get_all_tasks_handler.py  test_get_tasks_by_status_handler.py  test_mark_task_done_handler.py  test_mark_task_pending_handler.py  test_modify_task_handler.py  test_task_entity.py
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/application/di/: Container.ts
(+71 files in other folders)
