[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-backend"
version = "0.1.0"
description = "Todo List Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-core>=2.18.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
